Nav drawer demo ready

--- a/NavigationDrawerInApp/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawerInApp/app/src/main/AndroidManifest.xml
@@ -21,8 +21,12 @@
             android:name=".BaseActivity"
             android:label="@string/title_activity_drawer"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SecondActivity" />
-        <activity android:name=".ThirdActivity"></activity>
+        <activity
+            android:name=".SecondActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ThirdActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
